# slate

./: .editorconfig  .envrc  .gitignore  .tool-versions  AUTHORS  README.md  meson.build  meson_options.txt  slate.doap
.cursor/rules/: gtk4.mdc  meson_build.mdc  meson_commands.mdc  project_issues.mdc
.github/workflows/: build.yml
data/: meson.build  org.gnome.Slate.gresource.xml  org.slate.app.gresource.xml
data/gsettings/: meson.build  org.gnome.Slate.gschema.xml
data/ui/: main.blp  preferences.blp  project_dashboard.blp
doc/: PLANNING.md  PLANNING_REVIEW.md  configuration.md  meson.build  slate.toml.in  urlmap.js  usage.md
doc/plan/: 2025-08-22-core-infrastructure.md  2025-08-22-user-interface-development.md
doc/spec/: 2025-08-22-configuration-system.md  2025-08-22-core-application-architecture.md  2025-08-22-user-interface-components.md
docs/: CONCEPT.md  PLANNING.md
docs/api/: meson.build
docs/developer-guide/: plugin-development.md
docs/plan/: 2025-08-22-configuration-implementation.md  2025-08-22-dashboard-implementation.md  2025-08-22-issue-generation.md  2025-08-22-plugin-system-development.md
docs/spec/: 2025-08-22-dashboard-system.md  2025-08-22-plugin-system.md
examples/: meson.build  sample-config.hcl  test-hcl-config.c
examples/plugins/: meson.build
examples/plugins/hello-world/: hello-world-plugin.c  hello-world-plugin.h  hello-world-widget.c  hello-world-widget.h  hello-world.gresource.xml  hello-world.plugin.in  meson.build
examples/plugins/hello-world/ui/: hello-world-widget.ui
src/: app.vala  meson.build
src/libslate/: meson.build  slate-init.c  slate.h
src/libslate/core/: meson.build  slate-buildable.c  slate-buildable.h  slate-config.c  slate-config.h
src/libslate/plugins/: meson.build  slate-header-bar-extension.c  slate-header-bar-extension.h  slate-plugin-interface.c  slate-plugin-interface.h  slate-plugin-manager.c  slate-plugin-manager.h
src/libslate/ui/: meson.build  slate-box.c  slate-box.h  slate-chart.c  slate-chart.h  slate-dashboard-card.c  slate-dashboard-card.h  slate-dashboard.c  slate-dashboard.h  slate-enums.c  slate-enums.h  slate-header-bar.c  slate-header-bar.h  slate-utility.c  slate-utility.h  slate-widget.c  slate-widget.h
src/libslate/ui/data/: org.gnome.libslate-ui.gresource.xml
src/libslate/ui/data/ui/: box.blp  slate-dashboard.ui
src/slate/: app.vala  db.vala  libslate-1.0.vapi  meson.build  preferences.vala  settings.vala  ui.vala
subprojects/: gi-docgen.wrap
subprojects/libghcl/: README.md  meson.build  meson_options.txt
subprojects/libghcl/examples/: meson.build  slate-example.c
subprojects/libghcl/src/: hcl-block.c  hcl-block.h  hcl-document.c  hcl-document.h  hcl-enums.c  hcl-enums.h  hcl-lexer.c  hcl-lexer.h  hcl-parser.c  hcl-parser.h  hcl-value.c  hcl-value.h  hcl.h
subprojects/libghcl/tests/: meson.build  test-block.c  test-document.c  test-lexer-enhanced.c  test-lexer.c  test-parser.c  test-value.c
tests/: meson.build
tests/integration/: meson.build  test-dashboard-system.c  test-plugin-system.c
tests/libslate/: meson.build  test-box.c  test-buildable.c  test-config.c  test-enums.c
